Test create patient
