# swagger_output.json
@@ -43,7 +43,7 @@
         }
       }
     },
-    "/users/{id}": {
+    "/users/user/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -55,8 +55,8 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -81,15 +81,30 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
     },
     "/healthcheck/": {
       "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/patients/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
         "description": "",
         "responses": {
           "200": {
